# SPE-ReadingElective

./: benchmark.sh  docker-compose.yml  stress-test.js
models/: documentation_Feb_2_26.txt
python-app/: Dockerfile  main.py
rust-app/: Cargo.toml  Dockerfile
rust-app/src/: main.rs
sbom/: python_sbom.txt  rust_sbom.txt  wasm_sbom.txt
wasm-app/: Cargo.toml  Dockerfile
wasm-app/src/: lib.rs
