[package]
name = "rust-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# 1. The Web Server (Matches FastAPI)
# Actix-web is one of the fastest web frameworks in the world.
actix-web = "4"
actix-multipart = "0.6"  # Handles file uploads

# 2. The Brain Engine (Matches onnxruntime)
# 'ort' is a safe Rust wrapper around the Microsoft ONNX Runtime C++ library.
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }

# 3. The Math Wizard (Matches NumPy)
# ndarray lets us handle multi-dimensional matrices.
ndarray = "0.15"

# 4. The Photographer (Matches Pillow)
# Opens and resizes images.
image = "0.24"

# 5. Utilities
futures-util = "0.3" # Helps with async file uploads
uuid = { version = "1.0", features = ["v4"] } # For temp filenames
env_logger = "0.10" # Logging
log = "0.4"
serde_json = "1.0"
time = "=0.3.36"
